[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/actors/actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/actors/player/player.gd" type="Script" id=2]
[ext_resource path="res://assets/images/actor_sprites/hair/hair_upswept.png" type="Texture" id=3]
[ext_resource path="res://scenes/actors/player/states/walking.gd" type="Script" id=4]
[ext_resource path="res://scenes/actors/player/states/dodging.gd" type="Script" id=5]
[ext_resource path="res://scenes/camera/game_camera.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/util/inputMgr/inputMgr.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/inventoryMgr/inventoryMgr.tscn" type="PackedScene" id=8]

[node name="player" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="hair" parent="." index="3"]
texture = ExtResource( 3 )

[node name="walking" type="Node" parent="stateMachine" index="0"]
script = ExtResource( 4 )
is_starting_state = true

[node name="dodging" type="Node" parent="stateMachine" index="1"]
script = ExtResource( 5 )

[node name="game_camera" parent="." index="7" instance=ExtResource( 6 )]
current = true

[node name="inputMgr" parent="." index="9" instance=ExtResource( 7 )]

[node name="hitbox" parent="." index="10"]
collision_layer = 2
collision_mask = 20

[node name="interactor" type="Area2D" parent="." index="11"]
monitorable = false
collision_layer = 0
collision_mask = 32

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="interactor" index="0"]
polygon = PoolVector2Array( 30.1721, -12.8131, 37.5878, -0.190746, 31.2766, 12.2738, 2.335, 3.76691, 2.4371, -4.2985 )

[node name="Polygon2D" type="Polygon2D" parent="interactor" index="1"]
visible = false
color = Color( 0.878431, 0.152941, 0.152941, 1 )
polygon = PoolVector2Array( 2.3739, 0.191594, 21.2317, 0.298538, 21.196, -0.41442, 2.4452, -0.271829 )

[node name="inventoryMgr" parent="." index="12" instance=ExtResource( 8 )]
auto_equip = true
[connection signal="area_entered" from="interactor" to="." method="_on_interactor_area_entered"]
[connection signal="area_exited" from="interactor" to="." method="_on_interactor_area_exited"]

[editable path="hands"]
